--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,3 +6,12 @@ unbind C-b
 
 #setting the delay between prefix and command
 set -s escape-time 1
+
+# Set the base index for windows to 1 instead of 0
+set -g base-index 1
+
+# Set the base index for panes to 1 instead of 0
+setw -g pane-base-index 1
+
+# Reload the file with Prefix r
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
