--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,3 +15,35 @@ setw -g pane-base-index 1
 
 # Reload the file with Prefix r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+# Ensure that we can send Ctrl-A to other apps
+bind C-a send-prefix
+
+# splitting panes with | and -
+bind | split-window -h
+bind - split-window -v
+
+# moving between panes with Prefix h,j,k,l
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# Quick window selection
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
+
+# Pane resizing panes with Prefix H,J,K,L
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+# mouse support - set to on if you want to use the mouse
+set -g mouse off
+
+# Set the default terminal mode to 256color mode
+set -g default-terminal "screen-256color"
+
+# set the status line's colors
+set -g status-style fg=white,bg=black
