--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,3 +47,17 @@ set -g default-terminal "screen-256color"
 
 # set the status line's colors
 set -g status-style fg=white,bg=black
+
+# set the color of the window list
+setw -g window-status-style fg=cyan,bg=black
+
+# set colors for the active window
+setw -g window-status-current-style fg=white,bold,bg=red
+
+# colors for pane borders
+setw -g pane-border-style fg=green,bg=black
+setw -g pane-active-border-style fg=white,bg=yellow
+
+# active pane normal, other shaded out
+setw -g window-style fg=colour240,bg=colour235
+setw -g window-active-style fg=white,bg=black
