--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,3 +61,23 @@ setw -g pane-active-border-style fg=white,bg=yellow
 # active pane normal, other shaded out
 setw -g window-style fg=colour240,bg=colour235
 setw -g window-active-style fg=white,bg=black
+
+# Command / message line
+set -g message-style fg=white,bold,bg=black
+
+# Status line left side to show Session:window:pane
+set -g status-left-length 40
+set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+
+# Status line right side - 31-Oct 13:37
+set -g status-right "#[fg=cyan]%d %b %R"
+
+# Update the status line every sixty seconds
+set -g status-interval 60
+
+# Center the window list in the status line
+set -g status-justify centre
+
+# enable activity alerts
+setw -g monitor-activity on
+set -g visual-activity on
