--- a/.tmux.conf
+++ b/.tmux.conf
@@ -81,3 +81,6 @@ set -g status-justify centre
 # enable activity alerts
 setw -g monitor-activity on
 set -g visual-activity on
+
+# enable vi keys.
+setw -g mode-keys vi
