--- a/.tmux.conf
+++ b/.tmux.conf
@@ -84,3 +84,18 @@ set -g visual-activity on
 
 # enable vi keys.
 setw -g mode-keys vi
+
+# xclip for copy and paste text (need to install xclip)
+bind Escape copy-mode
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -i -sel p -f | xclip -i -sel c" \; display-message "copied to system clipboard"
+unbind p
+bind p paste-buffer
+
+bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+
+# pbcopy and pbpaste under MacOS 
+# brew install reattach-to-user-namespace 
+set -g default-command "reattach-to-user-namespace -l /bin/zsh"
+bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind C-v run "tmux set-buffer \"$(reattach-to-user-namespace pbpaste)\"; tmux paste-buffer"
