add more tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -96,6 +96,6 @@ bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
 
 # pbcopy and pbpaste under MacOS 
 # brew install reattach-to-user-namespace 
-set -g default-command "reattach-to-user-namespace -l /bin/zsh"
-bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-bind C-v run "tmux set-buffer \"$(reattach-to-user-namespace pbpaste)\"; tmux paste-buffer"
+# set -g default-command "reattach-to-user-namespace -l /bin/zsh"
+# bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+# bind C-v run "tmux set-buffer \"$(reattach-to-user-namespace pbpaste)\"; tmux paste-buffer"
