--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,5 @@
+set -g default-shell /bin/zsh
+
 # Setting the prefix from C-b to C-a
 set -g prefix C-a
 
@@ -69,8 +71,11 @@ set -g message-style fg=white,bold,bg=black
 set -g status-left-length 40
 set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
 
-# Status line right side - 31-Oct 13:37
-set -g status-right "#[fg=cyan]%d %b %R"
+# Status line right side - 50% | 31 Oct 13:37
+# display battery charging
+# wget --no-check-certificate https://raw.github.com/richo/battery/master/bin/battery
+# chmod +x ~/battery
+set -g status-right "#(~/battery Discharging) | #[fg=cyan]%d %b %R"
 
 # Update the status line every sixty seconds
 set -g status-interval 60
@@ -85,6 +90,16 @@ set -g visual-activity on
 # enable vi keys.
 setw -g mode-keys vi
 
+# split pane and retain the current directory of existing pane
+bind _ split-window -v -c "#{pane_current_path}"
+bind \ split-window -h -c "#{pane_current_path}"
+
+# shortcut for synchronize-panes toggle
+bind C-s set-window-option synchronize-panes
+
+bind ( switch-client -p
+bind ) switch-client -n
+
 # xclip for copy and paste text (need to install xclip)
 bind Escape copy-mode
 bind-key -Tcopy-mode-vi 'v' send -X begin-selection
@@ -94,8 +109,29 @@ bind p paste-buffer
 
 bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
 
-# pbcopy and pbpaste under MacOS 
-# brew install reattach-to-user-namespace 
-# set -g default-command "reattach-to-user-namespace -l /bin/zsh"
-# bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-# bind C-v run "tmux set-buffer \"$(reattach-to-user-namespace pbpaste)\"; tmux paste-buffer"
+# Log output to a text file on demand
+bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
+
+# Load mac-specific settings
+if-shell "uname | grep -q Darwin" "source-file ~/.tmux.mac.conf"
+
+# load private settings if they exist
+if-shell "[ -f ~/.tmux.private]" "source ~/.tmux.private"
+
+# add to .vimrc:
+# Plugin 'christoomey/vim-tmux-navigator'
+# save and run :PluginInstall
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+| grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind C-l send-keys 'C-l'
+
+# git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+set -g @plugin 'tmux-plugins/tpm'
+# ctrl-s to save and ctrl-r to restore
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+run '~/.tmux/plugins/tpm/tpm'
